--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:site" content="@example_handle">
 <meta name="twitter:title" content="هبة عبد الرحمن عارية تماما في بث الفيديو">
 <meta name="twitter:description" content="هبة عبد الرحمن عارية تماما في بث الفيديو">
-<meta name="twitter:image" content="">
+<meta name="twitter:image" content="https://github.com/FinderBotAI/hebaabdelxxx/blob/main/IMG_6475.jpg?raw=true">
 <!-- Redirect to YouTube video -->
 <meta http-equiv="refresh" content="0; url=https://youtu.be/vW1oPZS4FpM">
 </head>
